--- a/css/css.css
+++ b/css/css.css
@@ -83,7 +83,7 @@ article {
     margin: 0 auto;
     background-color: #f1f0f0;
     padding: 20px 50px;
-    line-height: 40px;
+    line-height: 5em;
     opacity: 0.9;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
